<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background"
    >

    <View
        android:id="@+id/topColourRectangleViewMainActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/pickTextView"
        android:background="@color/black"
        />

    <TextView
        android:id="@+id/pickTextView"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="@id/topColourRectangleViewMainActivity"
        app:layout_constraintBottom_toBottomOf="@id/topColourRectangleViewMainActivity"
        app:layout_constraintLeft_toRightOf="@id/questionImageViewLeft"
        app:layout_constraintRight_toLeftOf="@id/questionImageViewRight"
        android:padding="@dimen/android_standard_half_padding"
        android:text="@string/pick_activity_type"
        android:gravity="center"
        style="@style/customHeading"
        android:shadowColor="@color/grey"
        android:shadowDx="2"
        android:shadowDy="3"
        android:shadowRadius="2"/>

    <ImageView
        android:id="@+id/questionImageViewLeft"
        android:contentDescription="@string/question_mark_image"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:src="@drawable/icons8_question_mark"
        app:layout_constraintTop_toTopOf="@id/topColourRectangleViewMainActivity"
        app:layout_constraintBottom_toBottomOf="@id/topColourRectangleViewMainActivity"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <ImageView
        android:id="@+id/questionImageViewRight"
        android:contentDescription="@string/question_mark_image"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:src="@drawable/icons8_question_mark"
        app:layout_constraintTop_toTopOf="@id/topColourRectangleViewMainActivity"
        app:layout_constraintBottom_toBottomOf="@id/topColourRectangleViewMainActivity"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/filterTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topColourRectangleViewMainActivity"
        app:layout_constraintBottom_toBottomOf="@id/radioGroup"
        android:paddingStart="@dimen/android_standard_half_padding"
        android:text="@string/filter_by_price"
        style="@style/customSmallText"
        android:gravity="center"/>


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:padding="@dimen/android_standard_half_padding"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/topColourRectangleViewMainActivity"
            app:layout_constraintLeft_toRightOf="@id/filterTextView"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/allRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/android_standard_half_padding"
                android:text="@string/all_filter"
                android:textSize="11sp"
                android:fontFamily="@font/kalam_font_family"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/freeRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/android_standard_half_padding"
                android:text="@string/free_filter"
                android:textSize="11sp"
                android:fontFamily="@font/kalam_font_family"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                />
            <RadioButton
                android:id="@+id/cheapRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/android_standard_half_padding"
                android:text="@string/cheap_filter"
                android:textSize="11sp"
                android:fontFamily="@font/kalam_font_family"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                />
            <RadioButton
                android:id="@+id/middleRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/android_standard_half_padding"
                android:text="@string/middle_filter"
                android:textSize="11sp"
                android:fontFamily="@font/kalam_font_family"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                />
            <RadioButton
                android:id="@+id/expensiveRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/expensive_filter"
                android:textSize="11sp"
                android:fontFamily="@font/kalam_font_family"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                />


        </RadioGroup>


    <androidx.recyclerview.widget.RecyclerView
        android:padding="@dimen/android_standard_half_padding"
        android:id="@+id/ventureTypeRecyclerView"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>