<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailsContainer"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/background_blue"
    app:cardCornerRadius="8dp"
    app:cardElevation="1dp"
    app:cardMaxElevation="1dp"
    android:padding="5dp"
    android:layout_gravity="center"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/android_standard_half_padding">


    <TextView
        android:id="@+id/xCloseTextView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textStyle="bold"
        android:text="@string/x_close"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/circle_background"
        android:layout_gravity="end"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:contentDescription="@string/type_of_activity_image_desc"
        android:id="@+id/ventureDetailsTypeImageView"
        android:layout_width="170dp"
        android:layout_height="170dp"
        tools:src="@drawable/default_image"
        android:layout_margin="@dimen/android_standard_half_padding"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        />

    <TextView
        android:id="@+id/ventureCardDetailsNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/standard_heading_size"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        tools:text="Something really fun!Something really fun!Something really fun!"
        />

    <TextView
        android:id="@+id/ventureCardDetailsTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sub_heading_size"
        android:textColor="@color/white"
        tools:text="Social"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/ventureCardDetailsLinkTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="www.do_something_fun_or_else.co.uk"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="#00BCD4"
        android:textSize="@dimen/sub_heading_size"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/android_standard_half_padding"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:background="@color/teal_700"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/ventureCardDetailsParticipantsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participants"
                android:textColor="@color/white"
                android:textSize="@dimen/sub_heading_size"
                />
            <TextView
                android:id="@+id/ventureCardDetailsParticipantsAmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3"
                android:textColor="@color/white"
                android:textSize="@dimen/sub_heading_size"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:background="#4CAF50"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ventureCardDetailsPriceTextView"
                android:layout_width="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/white"
                android:textSize="@dimen/sub_heading_size"
                />
            <ProgressBar
                android:id="@+id/priceProgressBar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/android_standard_padding"
                android:layout_marginRight="@dimen/android_standard_padding"
                android:max="100"
                tools:progress="100"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progressTint="@color/white"
                />
        </LinearLayout>

        <LinearLayout
            android:background="@android:color/holo_orange_dark"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ventureCardDetailsAccessibilityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accessibility"
                android:textColor="@color/white"
                android:textSize="@dimen/sub_heading_size"
                />

            <ProgressBar
                android:id="@+id/accessibilityProgressBar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/android_standard_padding"
                android:layout_marginRight="@dimen/android_standard_padding"
                android:max="100"
                tools:progress="100"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progressTint="@color/white"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/tryAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again_button_text"
        android:background="@drawable/rounded_corner_button"
        app:backgroundTint="@null"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/android_standard_padding"
        />
</LinearLayout>



</androidx.cardview.widget.CardView>